--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 	<!--This draws the canvas on the webpage -->
-    <canvas id="mycanvas"></canvas> 
+    <canvas id="mycanvas" width="700" height="600"></canvas> 
   </body>
  
   <!-- Include the processing.js library -->
