--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 	<!--This draws the canvas on the webpage -->
-    <canvas id="mycanvas" width="700" height="600"></canvas> 
+    <canvas id="mycanvas"></canvas> 
   </body>
  
   <!-- Include the processing.js library -->
@@ -14,7 +14,7 @@
   <script>
   var programCode = function(processingInstance) {
     with (processingInstance) {
-      size(400, 400); 
+      size(800, 800); 
       frameRate(30);
         
       // Paste code from Khan Academy here:
