--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     with (processingInstance) {
       size(innerWidth, innerHeight); 
       frameRate(30);
-        
+	  setInterval(size(innerWidth, innerHeight););
       // Paste code from Khan Academy here:
       fill(255, 255, 0);
       ellipse(200, 200, 200, 200);
