--- a/index.html
+++ b/index.html
@@ -9,34 +9,25 @@
     </style>
   </head>
   <body>
-	<!--This draws the canvas on the webpage -->
     <canvas id="mycanvas"></canvas> 
   </body>
- 
-  <!-- Include the processing.js library -->
-  <!-- See https://khanacademy.zendesk.com/hc/en-us/articles/202260404-What-parts-of-ProcessingJS-does-Khan-Academy-support- for differences -->
-  <script src="https://cdn.jsdelivr.net/processing.js/1.4.8/processing.min.js"></script> 
+  <script src="//toolness.github.io/p5.js-widget/p5-widget.js"></script>
   <script>
-  var programCode = function(processingInstance) {
-    with (processingInstance) {
-      size(innerWidth, innerHeight); 
-      frameRate(30);
-	  setInterval(size(innerWidth, innerHeight););
-      // Paste code from Khan Academy here:
-      fill(255, 255, 0);
-      ellipse(200, 200, 200, 200);
-      noFill();
-      stroke(0, 0, 0);
-      strokeWeight(2);
-      arc(200, 200, 150, 100, 0, PI);
-      fill(0, 0, 0);
-      ellipse(250, 200, 10, 10);
-      ellipse(153, 200, 10, 10);
-    }};
+  	function setup() {
+  	createCanvas(400, 400);
+	}
 
-  // Get the canvas that ProcessingJS will use
-  var canvas = document.getElementById("mycanvas"); 
-  // Pass the function to ProcessingJS constructor
-  var processingInstance = new Processing(canvas, programCode); 
+	var frame = 0;
+	var x = 0;
+	var y = 0;
+
+	function draw() {
+ 	background(255);
+  	fill(255, 0, 0);
+  	var x = sin(frame/10)*100+200
+  	var y = cos(frame/10)*100+200
+  	circle(x, y, 50);
+  	frame++;
+}
   </script>
 </html>
