--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <canvas id="mycanvas"></canvas> 
   </body>
   <script src="//toolness.github.io/p5.js-widget/p5-widget.js"></script>
-  <script>
+  <script type="text/p5">
   	function setup() {
   	createCanvas(400, 400);
 	}
